objects/Approval__c.object
<CustomObject>
    <fields>
        <fullName>AC_By_Additional_Approver__c</fullName>
        <label>Approval Coments(By Additional Approver)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_AMID__c</fullName>
        <formula>Opportunity__r.Account.AMID_L2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account AMID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_City__c</fullName>
        <formula>Opportunity__r.Account_Shipping_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Country__c</fullName>
        <formula>Opportunity__r.Account_Shipping_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_PostalCode__c</fullName>
        <formula>Opportunity__r.Account_Shipping_PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_State__c</fullName>
        <formula>Opportunity__r.Account_Shipping_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Street__c</fullName>
        <formula>Opportunity__r.Account_Shipping_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_id__c</fullName>
        <formula>Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Approval__c</fullName>
        <label>Additional Approval (If Required) By:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Language_to_include_on_Quote__c</fullName>
        <label>Additional Language to include on Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Pursuit_BudgetUSD__c</fullName>
        <label>Additional Pursuit Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Pursuit_Budget_USD__c</fullName>
        <description>Do not Use this field</description>
        <label>DoNotUse Additional Pursuit Budget (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_sides_in_agreement__c</fullName>
        <label>All sides in agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alliance_Markup__c</fullName>
        <label>Alliance Markup(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anticipated_Carve_Out_from_License__c</fullName>
        <label>Anticipated Carve Out from License?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments (By Approver)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Description__c</fullName>
        <label>Approval Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Expires_on__c</fullName>
        <label>Approval Expires on (Date):</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Flow_Type__c</fullName>
        <label>Approval Flow Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unanimous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sequential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Long_Name__c</fullName>
        <formula>IF( RecordType.Name=&quot;Opportunity Review&quot;  , LEFT( Opportunity__r.Account.Name, 10)&amp;&apos; - &apos; &amp;LEFT( Opportunity__r.Name , 10)&amp;&apos; - &apos;&amp;&apos;OR&apos;&amp;&apos; - &apos;&amp;Name,IF(RecordType.Name=&quot;Opportunity Business Review&quot; , LEFT( Opportunity__r.Account.Name, 10)&amp;&apos; - &apos; &amp;LEFT( Opportunity__r.Name , 10)&amp;&apos; - &apos;&amp;&apos;OBR&apos;&amp;&apos; - &apos;&amp;Name, Name))</formula>
        <label>Approval Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Routing_Note__c</fullName>
        <label>Approval Routing Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Informal Contract Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Discount Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlier Discount Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard Term (Contract Length)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Negotiated Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTS Administrative Fee Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <label>Approved On (Date):</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalsGFmM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Email_A__c</fullName>
        <formula>CreatedBy.Approver_Email_A__c</formula>
        <label>Approver Email Addresses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_s_Email_Address__c</fullName>
        <label>Approver&apos;s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Model_TS__c</fullName>
        <label>Billing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Local Invoicing only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Border Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Model__c</fullName>
        <label>Billing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Level Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base + Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility with no minimums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility with minimums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>Used in CPQ Track</description>
        <label>Business Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES/TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Name__c</fullName>
        <label>CA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_eMail__c</fullName>
        <label>CA eMail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country_Time_Zone__c</fullName>
        <description>This time zone needs to match the country selected on this case in order to have the correct due date, considering the business hours and public holidays for that country, calculated.</description>
        <label>Case Country Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT+00:00) British Standard Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Irish Standard Time (Europe/Dublin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Western European Standard Time (Europe/Lisbon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) British Summer Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Amsterdam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Berlin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Brussels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Paris)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Prague)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Rome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Time (Africa/Algiers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Irish Summer Time (Europe/Dublin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Western European Summer Time (Europe/Lisbon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Amsterdam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Berlin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Brussels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Paris)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Prague)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Rome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Athens)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Bucharest)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Helsinki)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Istanbul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Time (Africa/Cairo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Israel Standard Time (Asia/Jerusalem)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) South Africa Standard Time (Africa/Johannesburg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Baghdad)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Kuwait)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Riyadh)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compare_Discount_with_Prev_Discount__c</fullName>
        <description>This field use in Matrix</description>
        <formula>IF( SN_Discount__c &lt;= Previous_Deal_Value__c , SN_Discount__c-Previous_Discount_Percent__c, SN_Discount__c-Previous_Discount_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Discount with Prev Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>FFP- Firm Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPLOE- Fixed Price Level of Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M- Time &amp; Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR- Cost Reimbursable (Cost Plus)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPFF- Cost Plus Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPAF- Cost Plus Award Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPIF- Cost Plus Incentive Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPIF- Fixed Price Incentive Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUP- Fixed Unit Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrencyIsoCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approval_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <label>Customer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name_Title__c</fullName>
        <label>Customer Contact Name Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <label>Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_No__c</fullName>
        <label>Customer Phone No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_bid_is_due_to_the_customer__c</fullName>
        <label>Date/Time bid is due to the customer?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Response__c</fullName>
        <label>Date/Time of Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Composition__c</fullName>
        <label>Deal Composition</label>
        <picklist>
            <picklistValues>
                <fullName>Multi-Element Deal in Multiple Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Element Deal in Single Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Services in Multiple Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Services in Single Country</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_of_Price_Hold_Discount__c</fullName>
        <label>Description of Price Hold Discount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dis_on_the_Quote_Itemized__c</fullName>
        <label>Discounts on the Quote Itemized % and Va</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELA_Structure__c</fullName>
        <label>ELA Structure</label>
        <picklist>
            <picklistValues>
                <fullName>TC313AAE - Flexible Perptual (with reallocations)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5033AAE - Flexible Perpetual Pool (without reallocations)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5032AAE - Unlimited with a ($$ or qty) Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5031AAE - Unlimited Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5031AAE - Double Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELA_Term_in_months__c</fullName>
        <label>ELA Term (in months)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_via_SWIPER__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EM% (via SWIPER)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Education_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Education Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Training Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_of_BU_Contact_Responsible_for_Mult__c</fullName>
        <label>Email of BU Contact Responsible for Mult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Margin__c</fullName>
        <label>Engagement Margin(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Future_License_Price_Hold_Discount__c</fullName>
        <label>Future License Price Hold Discount</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographic_License_Option__c</fullName>
        <label>Geographic License Option</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governing_Terms__c</fullName>
        <label>Governing Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Standard Ts&amp;Cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Standard Ts&amp;Cs to be negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Master</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Header_or_Item_Discount__c</fullName>
        <label>Header or Item Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Highest_Individual_Packaged_Services_Dis__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Highest Individual Packaged Services Dis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Specify_Type__c</fullName>
        <label>If Other, Please Specify Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_is_the_PM_in_the_region_ES_10pt__c</fullName>
        <label>If yes, is the PM% in the region ES 10pt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inbound_regions_for_multi_region_deal__c</fullName>
        <label>Inbound regions for multi region deal?</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Installed_Base_SW_Relicensing__c</fullName>
        <label>Installed Base SW Relicensing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Deal_being_financed__c</fullName>
        <label>Is Deal being financed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Professional_Service_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Professional Service Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_part_of_an_ES_deal__c</fullName>
        <label>Is this part of an ES deal?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_on_Quote__c</fullName>
        <label>Language on Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Org__c</fullName>
        <label>Lead Org</label>
        <picklist>
            <picklistValues>
                <fullName>EG-HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG-TS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PPS-PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS-IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSP__c</fullName>
        <label>MSP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Review_Request_Date__c</fullName>
        <label>Meeting Review Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_Country_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Multi_Country_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi Region/Multi Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Region_Deal__c</fullName>
        <label>Multi-Region Deal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(RecordType.Name   =&quot;Opportunity Review&quot;  ,HYPERLINK(&apos;/apex/DGApprovalOpportunityReviewDetail?Id=&apos; &amp; Id, Approval_Long_Name__c,&apos;_top&apos; ),IF(RecordType.Name  =&quot;Opportunity Business Review&quot; , HYPERLINK(&apos;/apex/DGApprovalBusinessReviewDetail?Id=&apos; &amp; Id, Approval_Long_Name__c,&apos;_top&apos;) ,HYPERLINK(&apos;/&apos;&amp; Id ,Approval_Long_Name__c,&apos;_top&apos;)))</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Channel_Partner__c</fullName>
        <formula>Opportunity__r.Primary_Partner__c</formula>
        <label>Name of Channel Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Education__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pull PL32 from Products/Services</description>
        <label>Net Education</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Hardware_0__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To be used when ESP and IM onboard</description>
        <label>Net Hardware [$0]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_PS_Net_Travel_Packaged_Services__c</fullName>
        <formula>Net_Professional_Services__c +  Net_Travel_Expenses__c + Net_Packaged_Services__c</formula>
        <label>Net PS + Net Travel + Packaged Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Packaged_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pull PL82 in USD from Products/Services</description>
        <label>Net Packaged Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Product__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pull from PLTE, PLU3, PLTF, PL87 from Products/Services</description>
        <label>Net Product</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Professional_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Professional Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>